<resources>
    <string name="app_name">GYM MANAGEMENT SYSTEM</string>
    <string name="wallpapers_hub">Wallpapers Hub</string>
    <string name="all_types_of_hd_wallpaper_are_available_on_our_app">All types of hd wallpaper are available on our app.</string>
    <string name="banner_id">ca-app-pub-1613505475944041/1241878721</string>
    <!--    <string name="interstitial_id">ca-app-pub-1613505475944041/4690796465</string>-->
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="communicate">Communicate</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="more_apps">More Apps</string>
    <string name="others">Others</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="exit">Exit</string>
    <string name="nav_open">Navigation Drawer Open</string>
    <string name="nav_close">Navigation Drawer Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_name">Category Name</string>
    <string name="login_here">Login Here!</string>
    <string name="submit">Submit</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="gym_management_system">Gym Management System</string>
    <string name="new_to_gms">New to GMS?</string>
    <string name="register"><a href="">Register</a></string>
    <string name="register_here">Register Here!</string>
    <string name="already_have_account">Already have account?</string>
    <string name="back"><a href="">Go Back</a></string>
    <string name="login">LOGIN</string>
    <string name="name">NAME</string>
    <string name="age">AGE</string>
    <string name="contact">CONTACT#</string>
    <string name="address">ADDRESS</string>
    <string name="email">EMAIL</string>
    <string name="retype_pass">Retype-Pass</string>
    <string name="news_feed">NEWS FEED</string>
    <string name="events">EVENTS</string>
    <string name="home">HOME</string>
    <string name="gym_plans">GYM PLANS</string>
    <string name="gym_timings">GYM TIMINGS</string>
    <string name="queries">QUERIES</string>
    <string name="help">HELP</string>
    <string name="logout">LOGOUT</string>
    <string name="trainers">TRAINERS</string>
    <string name="staff">STAFF</string>
    <string name="members">MEMBERS</string>
    <string name="add">ADD</string>
    <string name="saturday">Saturday:</string>
    <string name="monday">Monday:</string>
    <string name="sunday">Sunday:</string>
    <string name="tuesday">Tuesday:</string>
    <string name="wednesday">Wednesday:</string>
    <string name="thursday">Thursday:</string>
    <string name="friday">Friday:</string>
    <string name="image_url">Image URL</string>
    <string name="description">Description</string>
    <string name="add_image">Add Image</string>
    <string name="title">TITLE:</string>
    <string name="event">EVENT:</string>
    <string name="venue">VENUE:</string>
    <string name="timing">TIMING:</string>
    <string name="attendance">Attendance</string>
    <string name="messages">Messages</string>
    <string name="members_attendance">Members Attendance</string>
    <string name="present">Present</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="view_attendance">View Attendance</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="price">PRICE:</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="gallery">Gallery</string>
    <string name="upload">UPLOAD</string>
    <string name="choose">CHOOSE</string>
    <string name="profile">Profile</string>
    <string name="view_subscribed_plan">View Subscribed Plan</string>
</resources>