<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="left"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:title="@string/profile"
            app:showAsAction="never"
            android:icon="@drawable/profile"
            android:id="@+id/profile"
            />
        <item
            android:title="@string/communicate">
            <menu>
                <item
                    android:title="@string/rate_us"
                    app:showAsAction="never"
                    android:icon="@drawable/star"
                    android:id="@+id/rate_us"
                    />
                <item
                    android:title="@string/share"
                    app:showAsAction="never"
                    android:icon="@drawable/share"
                    android:id="@+id/share"
                    />
                <item
                    android:title="@string/more_apps"
                    app:showAsAction="never"
                    android:icon="@drawable/more"
                    android:id="@+id/more_apps"
                    />
            </menu>
        </item>
        <item
            android:title="@string/others">
            <menu>
                <item
                    android:title="@string/gallery"
                    app:showAsAction="never"
                    android:icon="@drawable/gallery"
                    android:id="@+id/gallery"
                    />
                <item
                    android:title="@string/about_us"
                    app:showAsAction="never"
                    android:icon="@drawable/us"
                    android:id="@+id/about_us"
                    />
                <item
                    android:title="@string/privacy_policy"
                    app:showAsAction="never"
                    android:icon="@drawable/policy"
                    android:id="@+id/privacy"
                    />
            </menu>
        </item>
        <item
            android:title="@string/exit"
            app:showAsAction="never"
            android:icon="@drawable/exit"
            android:id="@+id/exit"
            />
    </group>
</menu>