<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/news_feed"
        android:enabled="true"
        android:icon="@drawable/news"
        android:title="@string/news_feed" />

    <item
        android:id="@+id/events"
        android:enabled="true"
        android:icon="@drawable/event"
        android:title="@string/events" />

    <item
        android:id="@+id/btn_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/gym_plans"
        android:enabled="true"
        android:icon="@drawable/plan"
        android:title="@string/gym_plans" />

    <item
        android:id="@+id/gym_timing"
        android:enabled="true"
        android:icon="@drawable/time"
        android:title="@string/gym_timings" />
</menu>