<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.gms.activities.AddTrainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/text_fields">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:padding="15dp"
            android:id="@+id/etName"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/name">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_background"
                android:padding="15dp"
                android:inputType="number"
                android:id="@+id/etAge"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:hint="@string/age">
            </EditText>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/drop_down"
                android:layout_weight="1"
                android:background="@drawable/et_background">
            </Spinner>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/etContact"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:layout_marginBottom="10dp"
            android:hint="@string/contact">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/etAddress"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/address">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:padding="15dp"
            android:id="@+id/etEmail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_background"
                android:padding="15dp"
                android:id="@+id/password"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:hint="@string/password">
            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_background"
                android:padding="15dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:id="@+id/rPassword"
                android:hint="@string/retype_pass">
            </EditText>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submitbtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:layout_below="@id/text_fields"/>



</RelativeLayout>