<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.app.gms.activities.SignUpActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titlebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/register_here"
        android:textSize="40sp"
        android:fontFamily="sans-serif-smallcaps"
        android:textStyle="bold"
        android:textColor="#08BAF9"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/titlebar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/text_fields"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/image_view"
                android:src="@drawable/add"
                android:layout_margin="20dp"
                android:background="@drawable/button_background"
                android:scaleType="fitXY"
                android:layout_gravity="center">
            </ImageView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:padding="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/etName"
                android:layout_marginBottom="10dp"
                android:hint="@string/name">
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:padding="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:id="@+id/etAge"
                    android:hint="@string/age">
                </EditText>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/drop_down"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_background">
                </Spinner>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:padding="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/etContact"
                android:hint="@string/contact">
            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:padding="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/etAddress"
                android:hint="@string/address">
            </EditText>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:padding="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:id="@+id/etEmail"
                android:layout_marginBottom="10dp"
                android:hint="@string/email">
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:padding="15dp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/pass"
                    android:layout_weight="1"
                    android:hint="@string/password">
                </EditText>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:padding="15dp"
                    android:layout_marginRight="5dp"
                    android:id="@+id/r_pass"
                    android:layout_weight="1"
                    android:hint="@string/retype_pass">
                </EditText>

            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/submitbtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/button_background"
            android:text="@string/submit"
            android:textSize="20sp"
            android:textColor="#FFFF"
            android:textStyle="bold"
            android:layout_below="@id/text_fields"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/submitbtn"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account"
                android:textSize="15sp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/back"
                android:layout_marginLeft="5dp"
                android:textSize="15sp"
                android:textStyle="italic">
            </TextView>
        </LinearLayout>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>