<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.gms.fragments.TimingFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/add"
        android:contentDescription="@string/add"
        android:layout_margin="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:textSize="25sp"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:textSize="25sp"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:textSize="25sp"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:textSize="25sp"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:textSize="25sp"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:textSize="25sp"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textSize="25sp"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00 to 00:00"
                android:id="@+id/sat"
                android:textSize="25sp"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00 to 00:00"
                android:id="@+id/sun"
                android:textSize="25sp"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00 to 00:00"
                android:textSize="25sp"
                android:id="@+id/mon"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00 to 00:00"
                android:textSize="25sp"
                android:id="@+id/tue"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00 to 00:00"
                android:textSize="25sp"
                android:id="@+id/wed"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00 to 00:00"
                android:id="@+id/thu"
                android:textSize="25sp"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00 to 00:00"
                android:textSize="25sp"
                android:id="@+id/fri"
                android:layout_weight="1"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>