<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.gms.activities.DeletePlans">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/text_fields">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/title1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="Title">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/desc"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/description">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/price"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="Price">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_background"
            android:padding="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/trainer"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="Trainer">
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background"
        android:text="@string/delete"
        android:textSize="20sp"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="110dp"/>
    <Button
        android:id="@+id/updatebtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background"
        android:text="@string/update"
        android:textSize="20sp"
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"/>

</RelativeLayout>
